--- a/src/app/layout/index/index.component.html
+++ b/src/app/layout/index/index.component.html
@@ -1,3 +1,6 @@
 <app-menusuperior></app-menusuperior>
-<p>index works!</p>
-<app-pessoa></app-pessoa>
+
+<router-outlet></router-outlet>
+
+
+<app-footer></app-footer>
