--- a/src/app/layout/menusuperior/menusuperior.component.html
+++ b/src/app/layout/menusuperior/menusuperior.component.html
@@ -1,1 +1,4 @@
 <p>menusuperior works!</p>
+<input routerLink="/admin/pessoas" type="button" value="Listagem de pessoas"/>
+<br>
+<input routerLink="/login" type="button" value="Login"/>
