Roteamento de carros e livros feitos

--- a/src/app/layout/menusuperior/menusuperior.component.html
+++ b/src/app/layout/menusuperior/menusuperior.component.html
@@ -1,4 +1,6 @@
 <p>menusuperior works!</p>
 <input routerLink="/admin/pessoas" type="button" value="Listagem de pessoas"/>
+<input routerLink="/admin/carros" type="button" value="Listagem de carros"/>
+<input routerLink="/admin/livros" type="button" value="Listagem de livros"/>
 <br>
 <input routerLink="/login" type="button" value="Login"/>
