estilização e rotas atualizadas(entrega04/10)

--- a/src/app/sistema/login/login.component.html
+++ b/src/app/sistema/login/login.component.html
@@ -1,2 +1,16 @@
-<p>login works!</p>
-<input routerLink="" type="button" value="Sair"/>
+<div class="container"><form>
+  <div class="mb-3">
+    <h1>Login</h1> <br>
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1">
+  </div>
+  <div class="botoes">
+  <button type="submit" class="btn btn-primary">Submit</button>
+  <input routerLink="" class="btn btn-primary" type="button" value="Sair"/>
+</div>
+</form>
+</div>
