--- a/src/app/layout/menusuperior/menusuperior.component.html
+++ b/src/app/layout/menusuperior/menusuperior.component.html
@@ -1,6 +1,10 @@
-<p>menusuperior works!</p>
-<input routerLink="/admin/pessoas" type="button" value="Listagem de pessoas"/>
-<input routerLink="/admin/carros" type="button" value="Listagem de carros"/>
-<input routerLink="/admin/livros" type="button" value="Listagem de livros"/>
-<br>
-<input routerLink="/login" type="button" value="Login"/>
+
+<div class="nav-header">
+<input routerLink="/admin/pessoas" type="button" class="btn btn-outline-primary" value="Listagem de pessoas"/>
+<input routerLink="/admin/carros" type="button" class="btn btn-outline-primary" value="Listagem de carros"/>
+<input routerLink="/admin/livros" type="button" class="btn btn-outline-primary" value="Listagem de livros"/>
+<input routerLink="/login"  class="btn btn-outline-primary" type="button" value="Login"/>
+</div>
+
+
+
