--- a/src/app/carro/carroslist/carroslist.component.html
+++ b/src/app/carro/carroslist/carroslist.component.html
@@ -4,7 +4,7 @@
 <table> 
     <tr>
         <th>Nome</th>
-        <th>ano</th>
+        <th>Ano</th>
     </tr>
     
     <tr *ngFor="let carro of lista">
