adição de pessoas, livros, e carros feita

--- a/src/app/carro/carrosdetails/carrosdetails.component.html
+++ b/src/app/carro/carrosdetails/carrosdetails.component.html
@@ -1,1 +1,10 @@
-<p>carrosdetails works!</p>
+<div class="cadastro">
+
+    <h1>Modelo:</h1>
+    <input type="text" [(ngModel)]="carro.nome" />
+    
+    <h1>Ano:</h1>
+    <input type="number" [(ngModel)]="carro.ano" />
+    
+    <button (click)="salvar()">Salvar</button>
+    </div>
