--- a/src/app/livro/livrosdetails/livrosdetails.component.html
+++ b/src/app/livro/livrosdetails/livrosdetails.component.html
@@ -1,1 +1,10 @@
-<p>livrosdetails works!</p>
+<div class="cadastro">
+
+    <h1>Titulo:</h1>
+    <input type="text" [(ngModel)]="livro.titulo" />
+    
+    <h1>Autor:</h1>
+    <input type="text" [(ngModel)]="livro.autor" />
+    
+    <button (click)="salvar()">Salvar</button>
+    </div>
