--- a/src/app/pessoa/pessoasdetails/pessoasdetails.component.html
+++ b/src/app/pessoa/pessoasdetails/pessoasdetails.component.html
@@ -1,1 +1,10 @@
-<p>pessoasdetails works!</p>
+<div class="cadastro">
+
+<h1>Nome:</h1>
+<input type="text" [(ngModel)]="pessoa.nome" />
+
+<h1>Idade:</h1>
+<input type="number" [(ngModel)]="pessoa.idade" />
+
+<button (click)="salvar()">Salvar</button>
+</div>
