--- a/src/app/carro/carroslist/carroslist.component.html
+++ b/src/app/carro/carroslist/carroslist.component.html
@@ -3,7 +3,7 @@
 <p>Carros</p>
 <table> 
     <tr>
-        <th>Nome</th>
+        <th>Modelo</th>
         <th>Ano</th>
     </tr>
     
@@ -14,3 +14,20 @@
 
 </table>
 </div>
+</div>  
+<button (click)="abrirModal(abc)" >Novo carro</button>
+
+<ng-template #abc let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title">Modal title</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		
+        <app-carrosdetails (retorno)="addNaLista($event)" ></app-carrosdetails>
+            
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+	</div>
+</ng-template>
