--- a/src/app/pessoa/pessoas-list/pessoas-list.component.css
+++ b/src/app/pessoa/pessoas-list/pessoas-list.component.css
@@ -23,3 +23,6 @@ p{
   gap: 25vw;
   text-align: center;
 }
+div.modal-header,div.modal-body,div.modal-footer{
+  background-color: rgb(30, 30, 32);
+}
