--- a/src/app/pessoa/pessoas-list/pessoas-list.component.html
+++ b/src/app/pessoa/pessoas-list/pessoas-list.component.html
@@ -28,4 +28,22 @@
 </tr>
 </table>
 </div>
-</div>
+</div>  
+<button (click)="abrirModal(abc)" >Nova pessoa</button>
+ 
+
+
+<ng-template #abc let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title">Modal title</h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		
+        <app-pessoasdetails (retorno)="addNaLista($event)" ></app-pessoasdetails>
+            
+	</div>
+	<div class="modal-footer">
+		<button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+	</div>
+</ng-template>
