--- a/src/app/sistema/login/login.component.html
+++ b/src/app/sistema/login/login.component.html
@@ -2,14 +2,14 @@
   <div class="mb-3">
     <h1>Login</h1> <br>
     <label for="exampleInputEmail1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control"[(ngModel)]="usuario.email" name="email" >
   </div>
   <div class="mb-3">
     <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="password" class="form-control" [(ngModel)]="usuario.senha" name="senha">
   </div>
   <div class="botoes">
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button class="btn btn-primary" (click)="logar()">Logar</button>
   <input routerLink="" class="btn btn-primary" type="button" value="Sair"/>
 </div>
 </form>
