--- a/src/app/pessoa/pessoasdetails/pessoasdetails.component.css
+++ b/src/app/pessoa/pessoasdetails/pessoasdetails.component.css
@@ -1,3 +1,11 @@
 .cadastro{
     background-color: rgb(30, 30, 32);
+    color: rgb(204, 204, 204);
+}
+input{
+    background-color: rgb(55, 55, 56);
+    border-style: none;
+    border-radius: 5px ;
+    color: white;
+    font-weight: 500;
 }
