--- a/src/app/components/livro/livrosdetails/livrosdetails.component.html
+++ b/src/app/components/livro/livrosdetails/livrosdetails.component.html
@@ -1,13 +1,15 @@
-<div class="cadastro">
-    <h1>Nome:</h1>
-    <input type="text" [(ngModel)]="livroEditavel.titulo" />
-  
-    <h1>Autor:</h1>
-    <input type="text" [(ngModel)]="livroEditavel.autor" />
-  <br><br>
-    <button (click)="salvar()">
-      {{ livroEditavel.id ? 'Editar' : 'Cadastrar' }}
-    </button>
-    <button *ngIf="livroEditavel.id" (click)="limpar()">Cancelar</button>
-  </div>
-  
+<form (ngSubmit)="salvar()">
+  <div class="cadastro">
+      <h1>Titulo:</h1>
+      <input type="text" class="form-control" name="exampleInputText1" aria-describedby="emailHelp"
+      [(ngModel)]="livro.titulo">
+    
+      <h1>Autor:</h1>
+      <input type="text" class="form-control" name="exampleInputPassword1" [(ngModel)]="livro.autor">
+    
+    <br><br>
+    
+      <button type="submit" class="btn btn-primary">Salvar</button>
+    </div>
+    
+  </form>
