--- a/src/app/components/livro/livroslist/livroslist.component.html
+++ b/src/app/components/livro/livroslist/livroslist.component.html
@@ -14,6 +14,7 @@
         <td scope="col">{{livro.autor}}</td>
         <td >
             <button class="btn btn-outline-primary" (click)="editar(modal1, livro, i)">🖋️</button>
+            <button class="btn btn-outline-primary" (click)="excluir(livro.id)">🗑️</button>
           </td>
     </tr>
 
