--- a/src/app/components/carro/carrosdetails/carrosdetails.component.html
+++ b/src/app/components/carro/carrosdetails/carrosdetails.component.html
@@ -1,13 +1,15 @@
-<div class="cadastro">
-    <h1>Modelo:</h1>
-    <input type="text" [(ngModel)]="carroEditavel.nome" />
-  
-    <h1>Idade:</h1>
-    <input type="number" [(ngModel)]="carroEditavel.ano" />
-  <br><br>
-    <button (click)="salvar()">
-      {{ carroEditavel.id ? 'Editar' : 'Cadastrar' }}
-    </button>
-    <button *ngIf="carroEditavel.id" (click)="limpar()">Cancelar</button>
-  </div>
-  
+<form (ngSubmit)="salvar()">
+  <div class="cadastro">
+      <h1>Modelo:</h1>
+      <input type="text" class="form-control" name="exampleInputText1" aria-describedby="emailHelp"
+      [(ngModel)]="carro.modelo">
+    
+      <h1>Ano:</h1>
+      <input type="number" class="form-control" name="exampleInputPassword1" [(ngModel)]="carro.ano">
+    
+    <br><br>
+    
+      <button type="submit" class="btn btn-primary">Salvar</button>
+    </div>
+    
+  </form>
