--- a/src/app/components/carro/carroslist/carroslist.component.html
+++ b/src/app/components/carro/carroslist/carroslist.component.html
@@ -5,45 +5,30 @@
     <tr>
         <th>Modelo</th>
         <th>Ano</th>
-        <th> <button class="btn btn-outline-primary" (click)="abrirModal(abc)" >+</button> </th> 
+        <th> <button class="btn btn-outline-primary" (click)="adicionar(modal1)" >+</button> </th> 
     </tr>
     
-    <tr *ngFor="let carro of lista">
-        <td scope="col" >{{carro.nome}}</td>
+    <tr *ngFor="let carro of lista; let i = index">
+        <td scope="col" >{{carro.modelo}}</td>
         <td scope="col" >{{carro.ano}}</td>
-        <button class="btn btn-outline-primary" (click)="abrirModalEditar(editar, carro)">🖋️</button>
+        <button class="btn btn-outline-primary" (click)="editar(modal1, carro, i)">🖋️</button>
+        <button class="btn btn-outline-primary" (click)="excluir(carro.id)">🗑️</button>
     </tr>
 
 </table>
 </div>
 </div>  
 
-<ng-template #abc let-modal>
-	<div class="modal-header">
-		<h4 class="modal-title">Modal title</h4>
-		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
-	</div>
-	<div class="modal-body">
-		
-        <app-carrosdetails (salvarCarro)="addNaLista($event)" ></app-carrosdetails>
-            
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
-	</div>
-</ng-template>
-
-<ng-template #editar let-modal>
+<ng-template #modal1 let-modal>
     <div class="modal-header">
-      <h4 class="modal-title">Editar</h4>
-      <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+        <h4 class="modal-title">Modal title</h4>
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
     </div>
     <div class="modal-body">
-
-        <app-carrosdetails (salvarCarro)="edit($event)" ></app-carrosdetails>
-        
+       
+        <app-carrosdetails [carro]="carroSelecionadoParaEdicao" (retorno)="addOuEditarCarro($event)" ></app-carrosdetails>        
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
+        <button type="button" class="btn btn-light" (click)="modal.close('Close click')">Close</button>
     </div>
   </ng-template>
