--- a/src/app/components/pessoa/pessoaslist/pessoas-list.component.html
+++ b/src/app/components/pessoa/pessoaslist/pessoas-list.component.html
@@ -13,6 +13,7 @@
               <td>{{pessoa.idade}}</td>
               <td>
                 <button class="btn btn-outline-primary" (click)="editar(modal1, pessoa, i)">🖋️</button>
+                <button class="btn btn-outline-primary" (click)="excluir(pessoa.id)">🗑️</button>
               </td>
             </tr>
           </table>
