--- a/src/app/components/carro/carroslist/carroslist.component.html
+++ b/src/app/components/carro/carroslist/carroslist.component.html
@@ -12,7 +12,7 @@
         <td scope="col" >{{carro.modelo}}</td>
         <td scope="col" >{{carro.ano}}</td>
         <button class="btn btn-outline-primary" (click)="editar(modal1, carro, i)">🖋️</button>
-        <button class="btn btn-outline-primary" (click)="excluir(carro.id)">🗑️</button>
+        <button class="btn btn-outline-danger" (click)="excluir(carro.id)">🗑️</button>
     </tr>
 
 </table>
